crates/lingui_macro/tests/snapshots/jsx_named_placeholders__allows_dotted.snap
---
source: crates/lingui_macro/tests/jsx_named_placeholders.rs
info:
  jsx_placeholder_attribute: _t
---
import { Trans } from '@lingui/react/macro';
<Trans><a _t="ns.link" href="/">click</a></Trans>

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "_0hJpt",
    components: {
        ["ns.link"]: <a href="/"/>
    },
    message: "<ns.link>click</ns.link>"
}}/>;
