crates/lingui_macro/tests/snapshots/jsx_named_placeholders__allows_hyphenated.snap
---
source: crates/lingui_macro/tests/jsx_named_placeholders.rs
info:
  jsx_placeholder_attribute: _t
---
import { Trans } from '@lingui/react/macro';
<Trans><a _t="foo-bar" href="/">click</a></Trans>

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "IeIam7",
    components: {
        ["foo-bar"]: <a href="/"/>
    },
    message: "<foo-bar>click</foo-bar>"
}}/>;
