crates/lingui_macro/tests/snapshots/jsx_named_placeholders__basic.snap
---
source: crates/lingui_macro/tests/jsx_named_placeholders.rs
info:
  jsx_placeholder_attribute: _t
---
import { Trans } from "@lingui/react/macro";
<Trans>
  Hello <strong _t="em">world</strong>!
</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "6N0Fej",
    components: {
        em: <strong/>
    },
    message: "Hello <em>world</em>!"
}}/>;
