crates/lingui_macro/tests/snapshots/jsx_named_placeholders__defaults.snap
---
source: crates/lingui_macro/tests/jsx_named_placeholders.rs
info:
  jsx_placeholder_defaults:
    em: em
    a: link
---
import { Trans } from "@lingui/react/macro";
<Trans>
  Here's a <a>link</a> and <em>emphasis</em>.
</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "Jg_WOt",
    components: {
        link: <a/>,
        em: <em/>
    },
    message: "Here's a <link>link</link> and <em>emphasis</em>."
}}/>;
