crates/lingui_macro/tests/snapshots/jsx_named_placeholders__mixed_explicit_and_defaults.snap
---
source: crates/lingui_macro/tests/jsx_named_placeholders.rs
info:
  jsx_placeholder_attribute: _t
  jsx_placeholder_defaults:
    a: link
---
import { Trans } from "@lingui/react/macro";
<Trans>Hello <a href="/a">link 1</a>, normal, <a _t="link2" href="/b">link 2</a>.</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "yU9TUm",
    components: {
        link: <a href="/a"/>,
        link2: <a href="/b"/>
    },
    message: "Hello <link>link 1</link>, normal, <link2>link 2</link2>."
}}/>;
