crates/lingui_macro/tests/snapshots/jsx_named_placeholders__prop_order.snap
---
source: crates/lingui_macro/tests/jsx_named_placeholders.rs
info:
  jsx_placeholder_attribute: _t
---
import { Trans } from "@lingui/react/macro";
<Trans>Hello <a _t="link" href="/a" class="foo">link 1</a>, normal, <a _t="link" class="foo" href="/a">link 1 copy</a>.</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "9en3MH",
    components: {
        link: <a href="/a" class="foo"/>
    },
    message: "Hello <link>link 1</link>, normal, <link>link 1 copy</link>."
}}/>;
