crates/lingui_macro/tests/snapshots/jsx_named_placeholders__same_element_different_attributes_count_throws.snap
---
source: crates/lingui_macro/tests/jsx_named_placeholders.rs
info:
  jsx_placeholder_attribute: _t
---
import { Trans } from '@lingui/react/macro';
<Trans><em _t="same" class="hello">A</em> and <em _t="same" class="hello" data-testId="bla">B</em></Trans>

↓ ↓ ↓ ↓ ↓ ↓

error: Multiple distinct JSX elements with the same placeholder name (`same`). Differentiate them by adding/modifying the `_t` attribute (e.g. `<element _t="newName" />`).
 --> input.tsx:2:47
  |
2 | <Trans><em _t="same" class="hello">A</em> and <em _t="same" class="hello" data-testId="bla">B</em></Trans>
  |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
